<resources>
    <string name="app_name">ProyectoAndroidKotlin</string>
    <string name="nombre">Nombre</string>
    <string name="mostrar_nombre">Nombre:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="inicio_sesi_n">Inicio Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="icono">Icono</string>
    <string name="id">ID:</string>
    <string name="correo">Correo</string>
    <string name="mostrar_correo">Correo:</string>
    <string name="rol">Rol:</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <string name="mostrar_fecha_nacimiento">Fecha Nacimiento:</string>
    <string name="messageDialogUsuario">¿Qué desea hacer?</string>
    <string name="dialog_cancelar">Cancelar</string>
    <string name="dialog_editar">Editar</string>
    <string name="dialog_eliminar">Eliminar</string>
    <string name="dialog_confirmacion">¿Estás seguro de querer eliminar a este usuario?</string>
    <string name="dialog_aceptar">Aceptar</string>
    <string name="dialog_permiso_requerido">Permiso requerido</string>
    <string name="dialog_aceptar_permiso">Debe aceptar el permiso de ubicación para continuar.</string>
    <string name="dialog_ajustes">Ir a ajustes</string>
    <string name="toast_eliminado">Eliminado</string>
    <string name="toast_modificado">Modificado</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="mensaje_insertar_foto">¿Qué desea hacer?</string>
    <string name="cambiar_foto">Cambiar foto perfil</string>
    <string name="elegir_foto">Elegir foto</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="galeria">Galería</string>
    <string name="insertar_galeria">Añadir a galeria</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="imagen_insertada">Imagen insertada</string>
    <string name="imagen_no_insertada">Error al insertar imagen</string>
    <string name="usuario_eliminado">Usuario Eliminado</string>
    <string name="se_elimino_a">Se eliminó a </string>
    <string name="titulo_ubicacion">Servicio de ubicación</string>
    <string name="ubicacion_segundo_plano">Obteniendo ubicación en segundo plano</string>
    <string name="ubicacion_segundo_plano_con_datos">Ubicación en segundo plano\nLatitud: %1$s\nLongitud: %2$s</string>

    <string name="error_Usuario">Error Tabla Usuario</string>
    <string name="metodo_getAllUsuarios">getAllUsuarios</string>
    <string name="metodo_insertarUsuario">insertarUsuario</string>
    <string name="metodo_actualizarUsuario">actualizarUsuario</string>
    <string name="metodo_eliminarUsuarioById">eliminarUsuarioById</string>
    <string name="metodo_ingresarById">ingresarById</string>
    <string name="metodo_getUsuarioById">getUsuarioById</string>
    <string name="metodo_getAllUsuariosBaja">getAllUsuariosBaja</string>
    <string name="metodo_getAllUsuariosByRol">getAllUsuariosByRol</string>
    <string name="metodo_getRolById">getRolById</string>
    <string name="metodo_getIdByNombreAndContrasenya">getIdByNombreAndContrasenya</string>
    <string name="metodo_getAllGaleria">getAllGaleria</string>
    <string name="metodo_getGaleriaById">getGaleriaById</string>
    <string name="metodo_getGaleriaByRol">getGaleriaByRol</string>
    <string name="metodo_insertarImagenesGaleria">insertarImagenesGaleria</string>
    <string name="metodo_correoExiste">correoExiste</string>
    <string name="metodo_getBajaUsuario">getBajaUsuario</string>
    <string name="metodo_imageDecoder">Método imageDecoder</string>
    <string name="metodo_getUriFoto">Método getUriFoto</string>
    <string name="metodo_getRutaFromUri">Método getRutaFromUri</string>

    <string name="error_GrupoUsuario">Error Tabla GrupoUsuario</string>
    <string name="metodo_getAllGrupoUsuarios">getAllGrupoUsuarios</string>
    <string name="no_existe_galeria">No existe galería</string>
    <string name="no_usuario_bundle">No se encontró usuario en el bundle</string>

    <string name="error_longitud_nombre">Nombre demasiado largo (menos de 20 caracteres)</string>
    <string name="error_ingreso">ERROR al ingresar</string>
    <string name="cuenta_baja">Su cuenta ha sido dada de baja</string>
    <string name="error_correo">Este correo ya existe</string>
    <string name="error_campos_incompletos">Rellene todos los campos</string>
    <string name="error_no_coincide">El nombre o la contraseña no coinciden</string>
    <string name="error_formato_correo">Formato incorreto de correo (@)</string>
    <string name="error_formato_fecha">Formato incorrecto de fecha (dd-MM-yyyy)</string>
    <string name="error_cargando_imagen">No se pudo cargar la imagen</string>
    <string name="error_clase_InicioActivity">Error clase InicioActivity.kt</string>
    <string name="error_clase_RegistroActivity">Error clase RegistroActivity.kt</string>
    <string name="error_clase_LoginActivity">Error clase LoginActivity.kt</string>
    <string name="error_decodificar_imagen">Error al decodificar imagen</string>
    <string name="error_uri">Error en la uri</string>
    <string name="error_ruta_imagen">Error en la ruta imagen</string>
    <string name="error_usuario_no_encontrado">Error usuario no encontrado</string>

    <string name="ya_tengo_cuenta"><u>Ya tengo cuenta. Iniciar sesión.</u></string>
    <string name="no_tengo_cuenta_registrarme"><u>No tengo cuenta. Registrarme.</u></string>
    <string name="dar_de_baja">Dar de baja</string>
    <string name="ver_mapa">Ver mapa</string>
    <string name="bot_n_para_a_adir_im_genes">Botón para añadir imágenes</string>
    <string name="im_genes_galer_a">Imágenes galería</string>
    <string name="foto_de_usuario">Foto de usuario</string>
    <string name="buscar">Buscar</string>
    <string name="administradores">Administradores</string>
    <string name="usuarios_normales">Usuarios Normales</string>
    <string name="bajas">Bajas</string>
    <string name="seleccionar_todos">Seleccionar todos</string>
    <string name="bottomsheet">BottomSheet</string>
    <string name="fab_principal">FAB principal</string>
    <string name="fab_para_cambiar_la_foto_del_usuario">FAB para cambiar la foto del usuario</string>
    <string name="fab_para_insertar_fotos_en_galer_a">FAB para insertar fotos en galería</string>
    <string name="fab_para_ver_el_mapa">FAB para ver el mapa</string>
</resources>